<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="exit_label">Exit</string>
    <string name="about_label">About</string>
    <string name="new_game_label">New Game</string>
    <string name="continue_label">Continue</string>
    <string name="sudoku_game_label">Sudoku Game</string>
    <string name="title_activity_about">About&#8230;</string>
    <string name="about_text">Version 1.0.0\n\nThis game was made by Alejandro Perez Martin!</string>
    <string name="settings_label">Settings&#8230;</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>

</resources>
